--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,19 @@
 name: safe_config
 description: A safe and convenient way to read YAML configuration files.
-version: 3.0.0-b2
-author: stable|kernel <jobs@stablekernel.com>
-homepage: http://stablekernel.com
-documentation:
+version: 1.0.0
+author: DISCO Open Source <support@discoos.org>
+homepage: https://github.com/DISCOOS/dart-isolate-executor-2
 
 environment:
   sdk: ">=2.0.0 <3.0.0"
 
 dependencies:
   yaml: '>=2.1.8 <3.0.0'
-  runtime: ^1.0.0-5
+  runtime_2: ^1.0.0
+
+dependency_overrides:
+  runtime_2:
+    git: https://github.com/DISCOOS/dart-runtime-2.git
 
 dev_dependencies:
   test: ^1.3.0
