--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,14 @@ homepage: https://github.com/DISCOOS/dart-isolate-executor-2
 environment:
   sdk: ">=2.0.0 <3.0.0"
 
+publish_to: none
+
 dependencies:
   yaml: '>=2.1.8 <3.0.0'
-  runtime_2: ^1.0.0
-
-dependency_overrides:
   runtime_2:
-    git: https://github.com/DISCOOS/dart-runtime-2.git
+    git:
+      url: https://github.com/DISCOOS/dart-runtime-2.git
+      ref: master
 
 dev_dependencies:
   test: ^1.3.0
